--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,7 +109,6 @@ body {
   min-height: 100%;
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 body {
